# personal-assistant

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  MIGRATIONS.md  Makefile  PHASE_3_NOTES.md  README.md  SPEC.MD  alembic.ini  config.example.yaml  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  pyproject.toml  run-dev.sh  test_alert_simple.py  test_sheet.py  test_simple_window.py
alembic/: env.py
alembic/versions/: 5ccc449625b2_migrate_document_links_from_csv_to_json_.py  7ae29958397f_add_initiative_id_to_tasks_table.py  (+3 more)
docs/: ARCHITECTURE.md  CODE_REVIEW_SUMMARY.md  PREVENTION_STRATEGIES.md  SECURITY_CHECKLIST.md  TESTING_TEMPLATES.md  TUI_USAGE.md
secrets/: .gitkeep  google_client_id.txt.example  google_client_secret.txt.example  llm_api_key.txt.example
src/: __init__.py  cli.py  exceptions.py
tests/: conftest.py
todos/: 001-complete-p1-csv-injection-vulnerability.md  001-pending-p1-path-traversal-appdata-validation.md  002-complete-p1-missing-url-validation.md  002-pending-p1-file-permission-validation.md  003-complete-p1-length-validation-missing.md  003-pending-p1-database-session-lifecycle.md  004-complete-p1-command-injection-macos.md  004-pending-p1-race-condition-duplicate-prevention.md  005-complete-p1-agent-llm-extraction-gap.md  005-pending-p1-transaction-safety-mark-processed.md  006-complete-p1-missing-api-tests.md  006-pending-p2-error-handling-poll-method.md  007-pending-p2-sql-injection-filter-risk.md  008-pending-p2-git-commit-issues.md  009-pending-p2-missing-migration-tests.md
(+106 files in other folders)
